src/main.css
@import 'shared.css';
:root {
  min-height: 100%;
}

body {
  position: relative;
}
html,
body,
main {
  min-height: 100vh;
  overflow-x: hidden !important;
}
main {
  padding: 1rem 0.5rem 5rem;
  position: relative;
}
nav {
  justify-content: space-between !important;
  padding: 0.5rem;
}
.island {
  position: var(--island-pos);
  top: 8.75rem;
  left: 50%;
  height: 2.25rem;
  width: 15.5rem;
  border-radius: 5rem;
  transform: translate(-50%, -50%) skewX(-20deg);
  --island-bg: var(--green-dark);
  --island-sand: var(--sand);
  background: var(--island-bg);
  box-shadow: 0.05rem 0.15rem 0 var(--island-sand);
  filter: drop-shadow(0 0.05rem 0 var(--blue-50));
  --start-pos: -13rem;
  animation: island 1.5s ease-in-out;
}

.island::before {
  content: '';
  position: var(--island-pos);
  bottom: -0.7rem;
  left: 1.5rem;
  height: 1.5rem;
  width: 4.5rem;
  border-radius: 5rem;
  background: var(--island-bg);
  box-shadow: 0 0.2rem 0 var(--island-sand);
}
.island::after {
  content: '';
  position: var(--island-pos);
  bottom: -1rem;
  right: 3.5rem;
  height: 1.75rem;
  width: 3rem;
  border-radius: 5rem;
  background: var(--island-bg);
  box-shadow: 0 0.15rem 0 var(--island-sand);
}
.water-splash {
  z-index: -1;
  position: var(--island-pos);
  top: 7.8rem;
  left: 50%;
  height: 4.5rem;
  width: 20rem;
  border-radius: 2rem 2rem 10rem 10rem;
  border: 0.2rem solid var(--white-50);
  border-top-color: transparent;
  transform-origin: top center;
  transform: translateX(-9rem) skewX(-20deg);
  opacity: 0;
  animation: water-splash 1s ease-out 0.2s 1;
}

.water-splash::before {
  content: '';
  position: var(--island-pos);
  top: 0;
  left: 50%;
  height: 1.8rem;
  width: 12rem;
  border-radius: 2rem 2rem 10rem 10rem;
  border: 0.15rem solid var(--white-50);
  border-top-color: transparent;
  transform-origin: top center;
  transform: translateX(-50%) skewX(-20deg);
  opacity: 0;
  animation: water-splash 1s ease-out 0.2s 1;
}
.volcano {
  position: var(--island-pos);
  top: -0.95rem;
  left: 50%;
  height: 0;
  width: 2.35rem;
  border: solid 1rem transparent;
  border-bottom-color: var(--island-bg);
  transform: translate(-50%, -50%) scaleX(0.8) skewX(20deg);
  animation: volcano 90ms linear 0.5s 11;
}

.smoke-and-lava {
  z-index: 1;
  position: var(--island-pos);
  top: -8rem;
  left: 50%;
  height: 0;
  width: 14.2rem;
  border: solid 7rem transparent;
  border-top-color: var(--black-50);
  transform: translateX(-50%) scale(0, 0) skewX(20deg);
  animation: smoke 2s ease 1s forwards;
}

.smoke-and-lava::before {
  content: '';
  position: var(--island-pos);
  top: 0.05rem;
  left: -0.15rem;
  height: 1rem;
  width: 0.1rem;
  border-radius: 5rem;
  background: var(--yellow);
  box-shadow: 0 0 0.05rem 0.05rem var(--red-dark);
  transform: rotateZ(15deg);
}
.smoke-and-lava::after {
  content: '';
  position: var(--island-pos);
  top: 0.05rem;
  left: 0.25rem;
  height: 0.5rem;
  width: 0.1rem;
  border-radius: 5rem;
  background: var(--yellow);
  box-shadow: 0 0 0.05rem 0.05rem var(--red-dark);
  transform: rotateZ(-25deg);
}
#site-title {
  font-size: 2.5rem;
  text-transform: uppercase;
  margin: 12rem 0 2.5rem;
  padding: 0.5rem 0;
  background: linear-gradient(to bottom, var(--orange) 10%, var(--yellow) 110%);
  box-shadow: 0 0.15rem 0 var(--black-50);
  transform-origin: center right;
  transform: translateX(-101vw);
  animation: title 0.5s ease-in 1.5s forwards;
}

#route-start {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

figure,
img {
  position: relative;
  display: block;
  width: 100%;
  height: auto;
  border-radius: 0.66rem;
  overflow: hidden;
}

.copyright {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100vw;
  max-width: 100%;
}

#clippy {
  --clippy-border: 0.2rem solid var(--grey);
  position: absolute;
  left: 50%;
  top: 0;
  translate: -50% 100%;
  height: 3.2rem;
  width: 1.85rem;
  border-bottom-left-radius: 1rem;
  border-bottom-right-radius: 1rem;
  border: var(--clippy-border);
  border-top: none;
  filter: drop-shadow(0.075rem 0.1rem 0 var(--black-50));
}

#clippy:before {
  content: '';
  position: absolute;
  top: -3rem;
  left: -0.2rem;
  height: 2.8rem;
  width: 1.2rem;
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
  border: var(--clippy-border);
  border-bottom: none;
}
#clippy:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0.2rem;
  height: 1.8rem;
  width: 0.8rem;
  border-bottom-left-radius: 1rem;
  border-bottom-right-radius: 1rem;
  border: var(--clippy-border);
  border-top: none;
}

.clippy-eyes {
  position: absolute;
  top: -2rem;
  left: -0.7rem;
  height: 0.2rem;
  width: 2.6rem;
  background: linear-gradient(
    to right,
    var(--black),
    var(--black) 1rem,
    transparent 1rem,
    transparent 1.6rem,
    var(--black) 1.6rem
  );
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
}
.clippy-eyes:before,
.clippy-eyes:after {
  content: '⬤';
  z-index: 99;
  position: absolute;
  height: 1rem;
  width: 1rem;
  font-size: 0.6rem;
  line-height: 1rem;
  top: 0.5rem;
  background: var(--white);
  border-radius: 99rem;
  outline: 1px solid var(--grey);
}
.clippy-eyes:before {
  left: 0;
  animation: rotate-left 3s linear infinite;
}
.clippy-eyes:after {
  right: 0;
  animation: rotate-left 3s linear infinite 1s;
}

@keyframes rotate-left {
  0% {
    rotate: z 0deg;
  }
  50% {
    rotate: z 180deg;
  }
  100% {
    rotate: z 360deg;
  }
}

